Adding in a gzipped copy because why the hell not.

--- a/index.html
+++ b/index.html
@@ -191,7 +191,7 @@ bounce = setInterval(function() {
                 bq.style.left = '100px';
                 bq.style.display = 'none';
             }});
-        }, false);
+        }, true);
     }
 
     Janis(document.getElementsByTagName('h1')).animate({
